[gd_scene load_steps=3 format=3 uid="uid://coxrexwj3ljyb"]

[ext_resource type="FontFile" uid="uid://bd2gns5j8fooy" path="res://assets/fonts/m5x7.ttf" id="1_igrf4"]
[ext_resource type="Script" path="res://debug/debug_console.gd" id="1_uqlvl"]

[node name="DebugConsole" type="LineEdit"]
process_mode = 3
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("1_igrf4")
theme_override_font_sizes/font_size = 16
placeholder_text = "DEBUG - close by pressing ` or ~"
script = ExtResource("1_uqlvl")

[connection signal="debug_console_closed" from="." to="." method="_on_debug_console_closed"]
[connection signal="debug_console_opened" from="." to="." method="_on_debug_console_opened"]
[connection signal="text_submitted" from="." to="." method="_on_text_submitted"]
